Revert "Add vscode tweaks for customizing QMK."

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,10 @@
 // Suggested extensions
 {
   "recommendations": [
-      "Ciantic.keymapceditor-vsc",
-      "LukeVan.qmk-action-button"
+    "EditorConfig.EditorConfig",
+    "xaver.clang-format",
+    "llvm-vs-code-extensions.vscode-clangd",
+    "bierner.github-markdown-preview",
+    "donjayamanne.git-extension-pack"
   ]
 }
